2007-04-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-selectorComponentClass]): restored method.

2007-04-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalTasksListView.m ([UIxCalTasksListView
	-shouldDisplayCurrentTask]): the current task is not displayed if
	it is NOT completed or if the "showCompletedTasks" flag is set.
	The logic was inverted in Lightning and is now in SOGo too.

2007-04-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactView.m ([UIxContactView -workUrl]): we
	want the "work" url instead of the "home".

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-_saveSnapshot]): save url values from snapshot.
	([UIxContactEditor -initSnapshot]): load url values from snapshot.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-calendarList]): new method replacing "availableCalendars".

	* UI/Scheduler/UIxCalendarSelector.m ([UIxCalendarSelector
	-calendarFolders]): we now take the list of subscribed calendar
	from the container.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -calendarFoldersInContext:context]): new
	method derived from and replacing [UIxCalView calendarFolders].

2007-03-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-toManyRelationshipKeys]): don't put the predefined folders in the
	list if they are returned by the server.

	* UI/MailerUI/UIxMailTree.m ([UIxMailTree -flattenedNodes]): we no
	longer store the "flattenedBlocks" in a dictionary since the
	object will be deleted anyway and we don't need to put the folders
	in cache.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer -_attachmentIds]): take the current
	attachment path into account when computing the part urls.

2007-03-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsListViewContainer.m